--- a/sycl/doc/extensions/ExtendedAtomics/SYCL_INTEL_extended_atomics.asciidoc
+++ b/sycl/doc/extensions/ExtendedAtomics/SYCL_INTEL_extended_atomics.asciidoc
@@ -647,6 +647,10 @@ None.
 //*RESOLUTION*: Not resolved.
 //--
 
+== Feature Test Macro
+
+This extension defines the macro `SYCL_EXT_INTEL_EXTENDED_ATOMICS` to `1` to indicate that it is enabled.
+
 == Revision History
 
 [cols="5,15,15,70"]
