--- a/sycl/doc/extensions/UsePinnedMemoryProperty/UsePinnedMemoryPropery.adoc
+++ b/sycl/doc/extensions/UsePinnedMemoryProperty/UsePinnedMemoryPropery.adoc
@@ -20,3 +20,8 @@ This document describes an extension that introduces a +sycl::ext::oneapi::prope
 |`syc::ext::oneapi::property::buffer::use_pinned_host_memory`
 | The `use_pinned_host_memory` property adds the requirement that the SYCL runtime must allocate host pinned memory for the `sycl::buffer`. The property cannot be used with the `sycl::buffer` constructors that take hostData parameter, an invalid_object_error SYCL exception must be thrown in this case.
 |===
+
+== Feature Test Macro
+
+This extension defines the macro `SYCL_EXT_ONEAPI_USE_PINNED_HOST_MEMORY_PROPERTY` to `1`
+to indicate that it is enabled.
