--- a/sycl/doc/extensions/Bitcast/SYCL_INTEL_bitcast.asciidoc
+++ b/sycl/doc/extensions/Bitcast/SYCL_INTEL_bitcast.asciidoc
@@ -104,6 +104,10 @@ namespace sycl {
 
 None.
 
+== Feature Test Macro
+
+This extension defines the macro `SYCL_EXT_INTEL_BITCAST` to `1` to indicate that it is enabled.
+
 == Revision History
 
 [cols="5,15,15,70"]
