--- a/sycl/doc/extensions/SPIRV/SPV_INTEL_uniform_group_instructions.asciidoc
+++ b/sycl/doc/extensions/SPIRV/SPV_INTEL_uniform_group_instructions.asciidoc
@@ -66,7 +66,7 @@ This extension requires SPIR-V 1.0.
 
 == Overview
 
-This extension adds five new instructions in SPIR-V to enable additional group operations.
+This extension adds eight new instructions in SPIR-V to enable additional group operations.
 
 == Extension Name
 
