--- a/sycl/doc/extensions/DataFlowPipes/data_flow_pipes.asciidoc
+++ b/sycl/doc/extensions/DataFlowPipes/data_flow_pipes.asciidoc
@@ -634,9 +634,21 @@ Automated mechanisms are possible to provide uniquification across calls, and co
 *RESOLUTION*: Resolved.  Abstraction/libraries on top enable functionality like this.  We will make public a library that enables arrays of pipes.
 --
 
-== Feature Test Macro
+== Feature test macro
 
-This extension defines the macro `SYCL_EXT_INTEL_DATAFLOW_PIPES` to `1` to indicate that it is enabled.
+This extension provides a feature-test macro as described in the core SYCL
+specification section 6.3.3 "Feature test macros". Therefore, an implementation
+supporting this extension must predefine the macro `SYCL_EXT_INTEL_DATAFLOW_PIPES`
+to one of the values defined in the table below. Applications can test for the
+existence of this macro to determine if the implementation supports this
+feature, or applications can test the macro’s value to determine which of the
+extension’s APIs the implementation supports.
+
+[%header,cols="1,5"]
+|===
+|Value |Description
+|1     |Initial extension version. Base features are supported.
+|===
 
 == Revision History
 
