--- a/sycl/doc/extensions/FreeFunctionQueries/SYCL_INTEL_free_function_queries.asciidoc
+++ b/sycl/doc/extensions/FreeFunctionQueries/SYCL_INTEL_free_function_queries.asciidoc
@@ -209,6 +209,18 @@ Returns the `sub_group` instance representing the particular `sub-group` within 
 If prerequisites are not fulfilled the behavior is undefined
 |===
 
-== Feature Test Macro
+== Feature test macro
 
-This extension defines the macro `SYCL_EXT_ONEAPI_FREE_FUNCTION_QUERIES` to `1` to indicate that it is enabled.
+This extension provides a feature-test macro as described in the core SYCL
+specification section 6.3.3 "Feature test macros". Therefore, an implementation
+supporting this extension must predefine the macro `SYCL_EXT_ONEAPI_FREE_FUNCTION_QUERIES`
+to one of the values defined in the table below. Applications can test for the
+existence of this macro to determine if the implementation supports this
+feature, or applications can test the macro’s value to determine which of the
+extension’s APIs the implementation supports.
+
+[%header,cols="1,5"]
+|===
+|Value |Description
+|1     |Initial extension version. Base features are supported.
+|===
