--- a/sycl/doc/extensions/UsePinnedMemoryProperty/UsePinnedMemoryPropery.adoc
+++ b/sycl/doc/extensions/UsePinnedMemoryProperty/UsePinnedMemoryPropery.adoc
@@ -21,7 +21,19 @@ This document describes an extension that introduces a +sycl::ext::oneapi::prope
 | The `use_pinned_host_memory` property adds the requirement that the SYCL runtime must allocate host pinned memory for the `sycl::buffer`. The property cannot be used with the `sycl::buffer` constructors that take hostData parameter, an invalid_object_error SYCL exception must be thrown in this case.
 |===
 
-== Feature Test Macro
+== Feature test macro
 
-This extension defines the macro `SYCL_EXT_ONEAPI_USE_PINNED_HOST_MEMORY_PROPERTY` to `1`
-to indicate that it is enabled.
+This extension provides a feature-test macro as described in the core SYCL
+specification section 6.3.3 "Feature test macros". Therefore, an implementation
+supporting this extension must predefine the macro 
+`SYCL_EXT_ONEAPI_USE_PINNED_HOST_MEMORY_PROPERTY` to one of the values defined
+in the table below. Applications can test for the existence of this macro to
+determine if the implementation supports this feature, or applications can test
+the macro’s value to determine which of the extension’s APIs the implementation
+supports.
+
+[%header,cols="1,5"]
+|===
+|Value |Description
+|1     |Initial extension version. Base features are supported.
+|===
