--- a/sycl/doc/extensions/Bitcast/SYCL_INTEL_bitcast.asciidoc
+++ b/sycl/doc/extensions/Bitcast/SYCL_INTEL_bitcast.asciidoc
@@ -111,8 +111,8 @@ specification section 6.3.3 "Feature test macros". Therefore, an implementation
 supporting this extension must predefine the macro `SYCL_EXT_INTEL_BITCAST` to
 one of the values defined in the table below. Applications can test for the
 existence of this macro to determine if the implementation supports this
-feature, or applications can test the macro’s value to determine which of the
-extension’s APIs the implementation supports.
+feature, or applications can test the macro's value to determine which of the
+extension's APIs the implementation supports.
 
 [%header,cols="1,5"]
 |===
